<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_people"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/meetings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_chats"
        android:enabled="true"
        android:icon="@drawable/ic_chats"
        android:title="@string/chats"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>