<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/lly_login_padding"
    android:weightSum="1"
    android:screenOrientation="portrait" >

    <TextView
        android:id="@+id/txtV_SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/txtV_SignIn_marginBottom"
        android:text="@string/txtV_SignIn"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/txtV_User"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edT_User"
        android:text="@string/txtV_User"
        android:textAppearance="@android:style/TextAppearance.Medium.Inverse" />


    <EditText
        android:id="@+id/edT_User"
        style="@style/LoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edT_User_marginBottom"
        android:background="@drawable/shapeedtext"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtV_Passw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edT_Passw"
        android:text="@string/txtV_Password"
        android:textAppearance="@android:style/TextAppearance.Medium.Inverse" />

    <EditText
        android:id="@+id/edT_Passw"
        style="@style/LoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shapeedtext"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/lly_SignOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/lly_SignOptions_padding">


    </LinearLayout>

    <TextView
        android:id="@+id/txtVForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/recoverPassword"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_SignIn"
        style="@style/Widget.Button.Transparent"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/btn_SignIn_marginBottom"
        android:text="@string/btn_SignIn" />

    <TextView
        android:id="@+id/txtVIfSignUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/txtV_IfSignUP"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_GoogleLogin"
            style="@style/MyButtonGoogle"
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_FacebookLogin"
            style="@style/MyButtonFacebook"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_TwitterLogin"
            style="@style/MyButtonTwitter"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</LinearLayout>