<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    android:background="@drawable/splashlooks">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:id="@+id/txVReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/lbl_forgot_password"
            android:textSize="20sp"
            android:textColorLink="@color/colorPrimary"
            android:textAppearance="@android:style/TextAppearance.Medium.Inverse" />

        <EditText
            android:id="@+id/email"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shapeedtext"
            android:hint="@string/hint_email"
            android:inputType="text" />


        <!-- Login Button -->

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/btn_reset_password"
            style="@style/ButtonRegister"
            android:textColor="@android:color/black" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>