<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashlooks"
    tools:context=".ui.Register.View.fragments.Data.SecondRegisterFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/space_mono"
        android:text=""
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edT_Mail"
        style="@style/LoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shapeedtext"
        android:hint="@string/hint_email"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/edt_Date"
        style="@style/LoginEditText"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shapeedtext"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/date"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/edT_Mail"
        app:layout_constraintTop_toBottomOf="@+id/txtDate" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/space_mono"
        android:text="@string/date"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/edt_Date"
        app:layout_constraintTop_toBottomOf="@+id/edT_Mail" />

    <TextView
        android:id="@+id/txtGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/space_mono"
        android:text="@string/gender"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtDate"
        app:layout_constraintTop_toTopOf="@+id/txtDate" />

    <Spinner
        android:id="@+id/spnGender"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:backgroundTint="@android:color/white"
        android:popupBackground="@color/colorAccent"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:spinnerMode="dialog"
        android:tooltipText="@string/gender"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/edt_Date"
        app:layout_constraintTop_toBottomOf="@+id/txtGender" />

    <TextView
        android:id="@+id/txtPassw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/space_mono"
        android:text="@string/txtV_Password"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/edT_Mail"
        app:layout_constraintTop_toBottomOf="@+id/edt_Date" />

    <EditText
        android:id="@+id/edT_Passw"
        style="@style/LoginEditText"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shapeedtext"
        android:hint="@string/txtV_Password"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtPassw"
        app:layout_constraintTop_toBottomOf="@+id/txtPassw"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>